# form2pa

./: .gitignore  README.md  git-branch-push.sh  package-lock.json  package.json
.cursor/commands/: branch_push.md
.github/: README.md
.github/workflows/: ci.yml  release.yml
src/: app.js  config.json  index.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
